--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <h1>Health & Wellness</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="home">Home</a></li>
+                <li><a href="contact.html">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -64,13 +64,12 @@
 
         <section id="appointments">
     <h2>Book an Appointment</h2>
-    <!-- Add appointment booking form -->
     <form action="mailto:your-email@example.com" method="POST" enctype="text/plain">
         <label for="doctor">Select Doctor:</label>
         <select name="doctor" id="doctor">
             <option value="doctor1">Doctor 1</option>
             <option value="doctor2">Doctor 2</option>
-            <!-- Add more doctor options -->
+           >
         </select>
         <label for="date">Select Date:</label>
         <input type="date" id="date" name="date">
