--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 </head>
 
 <body>
+    <a href="#">Services</a>
     <header>
     <div class="container">
         <h1>Health & Wellness</h1>
         <nav>
             <ul>
                 <li><a href="home">Home</a></li>
-                <li><a href="contact.html">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -26,7 +25,7 @@
     <main>
         <section id="home">
             <h2>Better health Better LifeStyle</h2>
-            <!-- Add introductory content here -->
+>
         </section>
         <section id="blogs">
             <div class="card-list">
@@ -37,25 +36,18 @@
                         When one is free from physical disabilities and mental distractions, 
                         the gates of the soul open." - B.K.S. IyengarA "developer" 
                         codes software and websites.</h3>
-                    <!-- <div class="arrow">
-                        <i class="fas fa-arrow-right card-icon"></i>
-                    </div> -->
+
                 </a>
                 <a href="https://timesofindia.indiatimes.com/readersblog/rambling-chaos/healthy-lifestyle-45897/" class="card-item">
                     <span class="designer">TOI</span>
                     <h3>A "designer" is a design expert."To keep the body in good health is a duty... 
                         otherwise, we shall not be able to keep our mind strong and clear." - Buddha</h3>
-                    <!-- <div class="arrow">
-                        <i class="fas fa-arrow-right card-icon"></i>
-                    </div> -->
+
                 </a>
                 <a href="https://www.health.harvard.edu/blog" class="card-item">
                     <span class="editor">Harvard Blog</span>
                     <h3>An "editor" ensures content quality and accuracy.
                         Good health and good sense are two of life's greatest blessings." - Publilius Syrus</h3>
-                    <!-- <div class="arrow">
-                        <i class="fas fa-arrow-right card-icon"></i>
-                    </div> -->
                 </a>
             </div>
 
