--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 <body>
     <div class="container">
         <h1>Contact Us</h1>
-        <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
+        <form action="mailto:harshithr2004@gmail.com" method="post" enctype="text/plain">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
