--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="#">Services</a>
+
     <header>
     <div class="container">
         <h1>Health & Wellness</h1>
@@ -53,10 +53,23 @@
 
         </section>
 
-
+<section id="video-container">
+    <div class ="video-container">
+    <h1>Lifestyle Video</h1>
+    <p>Make your life better with Health:</p>
+    <!-- Paste the YouTube iframe embed code here -->
+    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=un3--vdM4bE" frameborder="0" allowfullscreen></iframe>
+        
+        
+            <h1>Lifestyle Video</h1>
+            <p>Make your life better with Health:</p>
+            <!-- Paste the YouTube iframe embed code here -->
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=wIo7IJxsg3A" frameborder="0" allowfullscreen></iframe>
+                </div>
+    </section>
         <section id="appointments">
     <h2>Book an Appointment</h2>
-    <form action="mailto:your-email@example.com" method="POST" enctype="text/plain">
+    <form action="mailto:harshithr2004@gmail.com" method="POST" enctype="text/plain">
         <label for="doctor">Select Doctor:</label>
         <select name="doctor" id="doctor">
             <option value="doctor1">Doctor 1</option>
@@ -68,6 +81,7 @@
         <button type="submit">Book Appointment</button>
     </form>
 </section>
+
 
     </main>
     <footer>
