--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 Your Company.2ghts reserved.</p>
+        <p>&copy; 2024 Healthify. All rights reserved.</p>
     </footer>
 </body>
 </html>
