--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Health & Wellness</h1>
         <nav>
             <ul>
-                <li><a href="home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -25,7 +25,7 @@
     <main>
         <section id="home">
             <h2>Better health Better LifeStyle</h2>
->
+
         </section>
         <section id="blogs">
             <div class="card-list">
@@ -58,13 +58,16 @@
     <h1>Lifestyle Video</h1>
     <p>Make your life better with Health:</p>
     <!-- Paste the YouTube iframe embed code here -->
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=un3--vdM4bE" frameborder="0" allowfullscreen></iframe>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/MgVqmR7AvrE?si=pHL0fmvyISRM0Ofp"
+    title="YouTube video player" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
         
             <h1>Lifestyle Video</h1>
             <p>Make your life better with Health:</p>
             <!-- Paste the YouTube iframe embed code here -->
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=wIo7IJxsg3A" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wIo7IJxsg3A?si=JDrFsFo0LD1qxKZo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
     </section>
         <section id="appointments">
